--- a/renovate.json
+++ b/renovate.json
@@ -4,6 +4,9 @@
     "config:best-practices",
     ":dependencyDashboard"
   ],
+  "assignees": [
+    "Weastie"
+  ],
   "ignorePresets": [
     ":ignoreModulesAndTests"
   ]
