--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -2,7 +2,7 @@ name: Run Renovate
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0/30 * * * *"
+    - cron: "0/30 11-21 * * MON-FRI"
 
 jobs:
   renovate:
