--- a/.github/workflows/renovate.yaml
+++ b/.github/workflows/renovate.yaml
@@ -20,6 +20,8 @@ jobs:
             QODeOw-dwElfR5kzunCvwg/field/password > env:MULESOFT_PASS
             ct0MNUfbMRs3dXCDJpjJUA/custom_field/app_id > env:GH_APP_ID
             ct0MNUfbMRs3dXCDJpjJUA/field/keyPair[0][privateKey] > env:GH_APP_PRIVATE_KEY
+            9Vi7qUgp2ht2JvmZRs-YXA/field/login > env:AWS_ACCESS_KEY_ID
+            9Vi7qUgp2ht2JvmZRs-YXA/field/password > env:AWS_SECRET_ACCESS_KEY
       - name: Generate a github token
         id: generate-gh-app-token
         uses: actions/create-github-app-token@7e473efe3cb98aa54f8d4bac15400b15fad77d94 # v2
@@ -36,3 +38,6 @@ jobs:
         env:
           RENOVATE_MULESOFT_USERNAME: ${{ env.MULESOFT_USERNAME }}
           RENOVATE_MULESOFT_PASS: ${{ env.MULESOFT_PASS }}
+          AWS_ACCESS_KEY_ID: ${{ env.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ env.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: us-east-1
